# template-lfi-workflow-py

./: README.md  pyproject.toml
src/: app.py
